libs/updraft_core/src/snapshots/updraft_core__topic__tests__empty_traffic_snapshot_serializes_to_json.snap
---
source: libs/updraft_core/src/topic.rs
expression: topic
---
{
  "topic": "traffic",
  "value": {
    "type": "snapshot",
    "value": []
  }
}
