libs/updraft_core/src/snapshots/updraft_core__topic__tests__non_empty_traffic_snapshot_serializes_typed_values_as_scalars.snap
---
source: libs/updraft_core/src/topic.rs
expression: topic
---
{
  "topic": "traffic",
  "value": {
    "type": "snapshot",
    "value": [
      {
        "id": "flarm:ABC123",
        "position": {
          "latitudeDegrees": 50.832,
          "longitudeDegrees": 6.189
        },
        "altitudeMslMeters": 350.0,
        "trafficType": "glider",
        "trackDegrees": 90.0,
        "alarmLevel": "low",
        "stale": false
      }
    ]
  }
}
