libs/updraft_core/src/snapshots/updraft_core__topic__tests__other_traffic_target_id_type_serializes_its_value.snap
---
source: libs/updraft_core/src/topic.rs
expression: topic
---
{
  "topic": "traffic",
  "value": {
    "type": "snapshot",
    "value": [
      {
        "id": "other:7:ABC123",
        "position": {
          "latitudeDegrees": 50.832,
          "longitudeDegrees": 6.189
        },
        "altitudeMslMeters": 350.0,
        "trafficType": "glider",
        "trackDegrees": 90.0,
        "alarmLevel": "low",
        "stale": false
      }
    ]
  }
}
