libs/updraft_core/src/snapshots/updraft_core__topic__tests__topic_serializes_to_tagged_camel_case_json.snap
---
source: libs/updraft_core/src/topic.rs
expression: topic
---
{
  "topic": "instruments",
  "value": {
    "gps": {
      "position": {
        "latitudeDegrees": 50.823,
        "longitudeDegrees": 6.186
      },
      "altitudeMeters": null,
      "groundSpeedMetersPerSecond": 45.0,
      "trackDegrees": 270.0,
      "fixTime": {
        "type": "utcInstant",
        "unixMilliseconds": 1767268800000
      },
      "stale": false
    },
    "pressureAltitude": {
      "meters": 1000.0,
      "stale": true
    },
    "trueAirspeed": {
      "metersPerSecond": 50.0,
      "stale": false
    },
    "derived": {
      "rawVerticalSpeed": {
        "metersPerSecond": 1.2,
        "stale": false
      },
      "verticalSpeed": {
        "metersPerSecond": 1.1,
        "stale": false
      },
      "vario": {
        "metersPerSecond": 1.5,
        "stale": true
      },
      "averageVario": {
        "metersPerSecond": 1.4,
        "stale": false
      },
      "wind": {
        "directionDegrees": 240.0,
        "speedMetersPerSecond": 5.0,
        "stale": false
      },
      "airspeed": {
        "metersPerSecond": 28.0,
        "stale": false
      },
      "heading": {
        "degrees": 265.0,
        "stale": false
      },
      "altitude": {
        "altitudeMslMeters": 1234.5,
        "stale": false
      },
      "bank": {
        "angleDegrees": -42.0,
        "stale": false
      },
      "netto": {
        "metersPerSecond": 2.1,
        "stale": false
      },
      "relativeVario": {
        "metersPerSecond": 1.4,
        "stale": false
      }
    },
    "terrainElevation": {
      "meters": 100.0,
      "stale": false
    },
    "altitudeAgl": {
      "meters": 200.0,
      "stale": false
    },
    "solarPosition": {
      "azimuthDegrees": 194.3,
      "elevationDegrees": 39.9,
      "stale": false
    }
  }
}
