libs/updraft_core/src/snapshots/updraft_core__topic__tests__traffic_delta_serializes_complete_upserts_and_id_removals.snap
---
source: libs/updraft_core/src/topic.rs
expression: topic
---
{
  "topic": "traffic",
  "value": {
    "type": "delta",
    "value": {
      "upserts": [
        {
          "id": "flarm:ABC123",
          "position": {
            "latitudeDegrees": 50.832,
            "longitudeDegrees": 6.189
          },
          "altitudeMslMeters": 350.0,
          "trafficType": "glider",
          "trackDegrees": 90.0,
          "alarmLevel": "low",
          "stale": false
        }
      ],
      "removed": [
        "icao:DEF456"
      ]
    }
  }
}
